Substituir Tomcat 8.5 por Tomcat 7 e corrigir caminho do banco de dados H2